customising for self-hosting.

--- a/src/mobile/index.html
+++ b/src/mobile/index.html
@@ -11,7 +11,7 @@
 
 		<meta name="format-detection" content="telephone=no">
 
-		<link rel="canonical" href="https://chriszarate.github.io/supergenpass/mobile/">
+		<link rel="canonical" href="http://exp.jointanet.com/sgp/mobile/">
 
 		<link rel="apple-touch-icon-precomposed" href="../assets/img/sgp@57x57.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/img/sgp@72x72.png">
@@ -67,7 +67,7 @@
 				</fieldset>
 
 				<fieldset id="LenField" class="Option">
-					<input id="Len" type="text" pattern="[0-9]*" value="10" maxlength="2">
+					<input id="Len" type="text" pattern="[0-9]*" value="8" maxlength="2">
 					<label id="Down" class="Button">–</label><label id="Up" class="Button">+</label>
 				</fieldset>
 
