--- a/mobile/index.html
+++ b/mobile/index.html
@@ -11,7 +11,7 @@
 
 		<meta name="format-detection" content="telephone=no">
 
-		<link rel="canonical" href="http://exp.jointanet.com/sgp/mobile/">
+		<link rel="canonical" href="https://exp.jointanet.com/sgp/mobile/">
 
 		<link rel="apple-touch-icon-precomposed" href="../assets/img/sgp@57x57.png">
 		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/img/sgp@72x72.png">
